# GBXX

./: .gitignore  CMakeLists.txt  Instruction.cpp  Instruction.h  Processor.cpp  Processor.h  disassemble.cpp  opfix.pl
src/: main.cpp
src/Instruction/: Instruction.cpp  Instruction.h
src/Processor/: Processor.cpp  Processor.h
